--- a/jupyter-labs-webscraping.ipynb
+++ b/jupyter-labs-webscraping.ipynb
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -877,18 +877,22 @@
       "F9 B5 ♺\n",
       "F9 B5\n",
       "F9 B5B1051.8609\n",
-      "F9 B5B1058.5613\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'string'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_846/627852121.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;31m# Customer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0;31m# TODO: Append the customer into launch_dict with key `Customer`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mcustomer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m             \u001b[0mlaunch_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Customer'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcustomer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0;31m#print(customer)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'string'"
+      "F9 B5B1058.5613\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺[\n",
+      "F9 B5 ♺\n",
+      "F9 B5B1060.6643\n",
+      "F9 B5 ♺\n",
+      "F9 B5B1061.2647\n",
+      "F9 B5B1060.7652\n",
+      "F9 B5B1049.9655\n",
+      "F9 B5B1051.10657\n",
+      "F9 B5B1058.8660\n",
+      "F9 B5B1063.2665\n",
+      "F9 B5B1067.1668\n",
+      "F9 B5\n"
      ]
     }
    ],
@@ -989,8 +993,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df= pd.DataFrame({ key:pd.Series(value) for key, value in launch_dict.items() })"
