--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -632,10 +632,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  month Booster_Version  Launch_Site       Landing_Outcome\n",
+      "0    01   F9 v1.1 B1012  CCAFS LC-40  Failure (drone ship)\n",
+      "1    04   F9 v1.1 B1015  CCAFS LC-40  Failure (drone ship)\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "SELECT \n",
+    "    substr(\"Date\", 6, 2) AS month,\n",
+    "    \"Booster_Version\",\n",
+    "    \"Launch_Site\",\n",
+    "    \"Landing_Outcome\"\n",
+    "FROM SPACEXTBL\n",
+    "WHERE \"Landing_Outcome\" LIKE 'Failure (drone ship)'\n",
+    "  AND substr(\"Date\", 0, 5) = '2015';\n",
+    "'''\n",
+    "\n",
+    "df_unique_launch_sites = pd.read_sql_query(query, con)\n",
+    "print(df_unique_launch_sites)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -651,10 +675,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Landing_Outcome  outcome_count\n",
+      "0              No attempt             10\n",
+      "1    Success (drone ship)              5\n",
+      "2    Failure (drone ship)              5\n",
+      "3    Success (ground pad)              3\n",
+      "4      Controlled (ocean)              3\n",
+      "5    Uncontrolled (ocean)              2\n",
+      "6     Failure (parachute)              2\n",
+      "7  Precluded (drone ship)              1\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "SELECT \n",
+    "    \"Landing_Outcome\", \n",
+    "    COUNT(*) AS outcome_count\n",
+    "FROM SPACEXTBL\n",
+    "WHERE \"Date\" BETWEEN '2010-06-04' AND '2017-03-20'\n",
+    "GROUP BY \"Landing_Outcome\"\n",
+    "ORDER BY outcome_count DESC;\n",
+    "'''\n",
+    "\n",
+    "df_unique_launch_sites = pd.read_sql_query(query, con)\n",
+    "print(df_unique_launch_sites)"
+   ]
   },
   {
    "cell_type": "markdown",
